# Computer

./: .envrc  .gitignore  DBAdapter.py  Dockerfile  EthicalAI.md  LICENSE  README.md  clementine.py  dal.py  entry.sh  exceptions.py  main.py  parsable_corriger_text.py  pyproject.toml  settings.py  test.py  test_buddhist_controller.py  test_ethicalai_prompt.py
.devcontainer/: devcontainer.json
.github/workflows/: python-pytest.yml
.indexes/: code_base
controllers/: BaseController.py  controller_bot.py  controller_ehticalai.py  controller_lancgchain.py  controller_notes.py  controller_openai.py  mep.py
controllers/agents/: baseagent.py  chat_documentation_bot.py
controllers/indexes/: code_documentation.py  eu_ai_act.py
controllers/prompts/: base.py  generate_html.py  mep_extract.py  website.py
controllers/tools/: CodebaseLookupTool.py
docs/: mep.md
interfaces/: api_ethicalai.py  bot_telegram.py  ui.py  ui_dynamic.py  www.py
interfaces/api/: html.py
interfaces/cli/: main.py  (+1 more)
models/: model_ethicalai.py  model_notes.py
scripts/: agent.py  code_doc.sql  update_packages.sh
tests/: 41.ogg_test  TestVoiceNoteController.py  __init__.py  test_api_eithicalai_evaluate_message.py  test_base_controller.py  test_buddhist_controller.py  test_buddhist_controller.py.old  test_buddhist_controller_integration.py  test_buddhist_controller_unit.py  test_code_documentation.py  test_french_note_controller.py  test_french_note_controller_2.py  test_html_controller.py  test_llm_website_generator.py
tools/: git.py
utils/: DBAdapter.py  exceptions.py  settings.py
(+16 files in other folders)
