[tool.poetry]
name = "computer"
version = "0.1.0"
description = "Human Computer Interface"
authors = ["Matt Thompson <thompsonson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.27.0"
openai = "^0.27.3"
sqlalchemy = "^2.0.8"
quart = "^0.18.3"
google-search-results = "^2.4.2"
pydantic = "^1.10.7"
gradio = "^3.27.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"
pytest = "^7.3.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
